# ysfm_v2

./: ALIGNMENT_FIX_GUIDE.md  COLMAP_GUIDE.md  DATA_REQUIREMENTS.md  DENSE_PIPELINE.md  DENSE_SFM_SETUP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  PIPELINE_GUIDE.md  PROJECT_DELIVERY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SIMPLE_PIPELINE.md  convert_colmap_to_poses.py  diagnose_alignment.py  extract_extrinsic.py  generate_sample_data.py  requirements.txt
calib/: depth_camera_info.json  extrinsic_depth_to_color.json  rgb_camera_info.json
calib_extraction/: CMakeLists.txt  CMakeLists_custom.txt  README.md  build_and_run.sh  compare_calibrations.py  extract_calib.cpp
configs/: simple.yaml  yolo_data.yaml
src/: __init__.py  calib_io.py  cluster_cracks_3d.py  colmap_io.py  colmap_sfm.py  measure_clusters_2d.py  measure_cracks_simple.py  pipeline.py  pixel_calibration.py  point_cloud_overlay.py  point_cloud_overlay_dense.py  scale_alignment.py  utils.py  validate_alignment.py  yolo_inference.py
tests/: test_pipeline.py
